--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 		
 		<!-- include jquery mobile css into html -->
-		<link rel="stylesheet" href="_css/jquery.mobile.css" />
-		<link rel="stylesheet" href="_css/project.css" />
+		<link rel="stylesheet" href="css/jquery.mobile.css" />
+		<link rel="stylesheet" href="css/project.css" />
 		<!-- include a customized theme into html -->
-		<link rel="stylesheet" href="_css/xieju.css" /> 
+		<link rel="stylesheet" href="css/xieju.css" /> 
 		
 		<!-- include jquery.js before jquery.mobile.js -->
-		<script src="_js/jquery.js"></script>
+		<script src="js/jquery.js"></script>
 		<!-- include jquery.mobile.js into html -->
-		<script src="_js/jquery.mobile.js"></script>
-		<script src="_js/Chart.js"></script>
-		<script src="_js/myscript.js"></script>
+		<script src="js/jquery.mobile.js"></script>
+		<script src="js/Chart.js"></script>
+		<script src="js/myscript.js"></script>
 	</head>
 	<body>
 		<!-- include the customized theme 'a' to render this site -->
 		<div data-role="page" data-theme="a" id="home">
 			<header id="header" data-role="header">
-				<img id="image" src="_images/eShop.jpg" />
+				<img id="image" src="images/eShop.jpg" />
 				<p id="info">This is a online eShop Web Application.<br>User can buy different products and also <br>rate these products.</p>
 				<a id="loginbtn" href="#login" data-icon="gear" class="ui-btn-left" data-rel="dialog" data-transition="pop">Login as Admin</a>
 			</header>
